# example-skill

./: .gitignore  DESIGN.md  README.md  install.sh  pyproject.toml
src/imagekit_skills/: cli.py  clients.py  installer.py  mcp_config.py
src/imagekit_skills/skills/search-docs/: SKILL.md
src/imagekit_skills/skills/transformation-builder/: SKILL.md
